--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Leafier: A Localized Web Administration Panel</title>
+<title>Leafier - A Localized Web Administration Panel</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
