--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <div class="black message">
-  <h1 class="title"><img src="images/logomed.png" /> server management panel</h1>
+  <h1 class="title"><img src="images/logomed.PNG" /> server management panel</h1>
   <div class="social">
   <a href="https://www.github.com/Leafier" class="">fork us on github</a>
 </div>
@@ -67,7 +67,7 @@
 </div>
 
 </div>
-<p class="footer"><img src="images/logosmall.png" /> Management System &copy; 2012 the Leafier Development Team || Leafier v0.0.1-ALPHA</p>
+<p class="footer"><img src="images/logosmall.PNG" /> Management System &copy; 2012 the Leafier Development Team || Leafier v0.0.1-ALPHA</p>
 </div>
 </body>
 </html>
